data/derived/fa15/progs/unify/prog1654.ml.out
Characters 36-41:
  let fixpoint (f,b) = wwhile ((helper(f,b)),b);;
                                      ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c
